--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -5,6 +5,5 @@ sql:
     queries: "query/query.sql"
     gen:
       go:
-        package: db
-        out: "db"
-        sql_package: "database/sql"
+        package: repository
+        out: "internal/repository"
